[package]
name = "ceramic-ahash"
description = "An associative hash function for hashing ceramic sets"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
hex = "0.4.3"
multihash = "0.18.0"

[dev-dependencies]
expect-test = "1.4.1"
