[package]
name = "ceramic-document"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow.workspace = true
ceramic-core = { path = "../core" }
ceramic-stream-id = { path = "../stream-id" }
cid.workspace = true
did-method-key = "0.2.1"
did-pkh = "0.2.1"
multibase.workspace = true
multihash = "0.18.0"
once_cell = "1.17.1"
rand = "0.8.5"
regex = "1.7.1"
serde.workspace = true
ssi.workspace = true
#ssi-jwk = { version = "0.1.0", features = ["ed25519"] }
#ssi-jwt = "0.1.0"

[dev-dependencies]
tokio = { workspace = true, features = ["fs", "macros", "rt"]}
